working on bonus oauth (since it's not already posted...)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">OAuth-Lab</string>
+    <string name="shared_preferences">twitter_oath_lab_shared_preferences</string>
 </resources>
